--- a/dev/index.html
+++ b/dev/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/vendor/vendors.min.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -189,27 +191,27 @@
 		<div class="row d-flex gap-5 justify-content-between mt-3">
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/emoji-sunglasses.svg" class="info__item-img img-fluid w-25 h-25" alt="HAPPY CUSTOMERS">
-				<p class="info__item-text text-center fw-bolder">привлечение «тёплых» клиентов,
+				<p class="info__item-text text-center fs-5 fw-bolder">привлечение «тёплых» клиентов,
 					нуждающихся в вашем продукте</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/gear.svg" class="info__item-img img-fluid  w-25 h-25" alt="OPTIMIZATION">
-				<p class="info__item-text text-center fw-bolder">оптимизацию интерфейса сайта (он
+				<p class="info__item-text text-center fs-5 fw-bolder">оптимизацию интерфейса сайта (он
 					станет более удобным)</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/graph-up.svg" class="info__item-img img-fluid  w-25 h-25" alt="NEW MARKET">
-				<p class="info__item-text text-center fw-bolder">нахождение новых рынков сбыта
+				<p class="info__item-text text-center fs-5 fw-bolder">нахождение новых рынков сбыта
 					ваших товаров/услуг</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/person-plus.svg" class="info__item-img img-fluid  w-25 h-25" alt="CUSTOMERS PLUS">
-				<p class="info__item-text text-center fw-bolder">появление дополнительных клиентов,
+				<p class="info__item-text text-center fs-5 fw-bolder">появление дополнительных клиентов,
 					а значит – рост продаж</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/stopwatch.svg" class="info__item-img img-fluid  w-25 h-25" alt="LONG TIME">
-				<p class="info__item-text text-center fw-bolder">отличие от контекстной рекламы,
+				<p class="info__item-text text-center fs-5 fw-bolder">отличие от контекстной рекламы,
 					эффект от SEO – длительный</p>
 			</div>
 		</div>
@@ -221,7 +223,7 @@
 	<div class="row flex-column justify-content-center align-items-center">
 		<div class="col-12 col-sm-6 d-flex flex-column justify-content-center align-items-center">
 			<h2 class="order__title fs-2 text-center">Заказать звонок</h2>
-			<p class="order__text fs-4 text-center">Получите индивидуальное коммерческое предложение для вашего сайта</p>
+			<p class="order__text fs-3 text-center">Получите индивидуальное коммерческое предложение для вашего сайта</p>
 			<button type="button" class="btn btn-warning fs-4 fw-bold py-3" data-bs-toggle="modal"
 				data-bs-target="#orderCall">Позвоните мне</button>
 		</div>
@@ -281,6 +283,40 @@
 			</div>
 		</div>
 	</div>
+</section>
+	<section class="block container py-5">
+	<div class="row d-flex justify-content-center justify-content-lg-between gap-3 mt-3">
+		<div class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center">
+				<img src="img/arrow-clockwise.svg" class="block__img my-4" alt="CHANGE">
+				<h5 class="fw-bold mb-4 ms-2">Ваш сайт никто не посещает и заявок — по нулям?</h5>
+				<ul class="block__list mb-5 me-2">
+					<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Исправим это недоразумение, потому что мы опытная команда — в этой теме  с 2004 года</li>
+					<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Ставим чёткие цели, применяем современные подходы к продвижению сайтов</li>
+					<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Используем гибкие методы к ведению проектов Agile и Scrum чтобы быть максимально эффективными</li>
+				</ul>
+		</div>
+
+		<div class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center">
+				<img src="img/wrench.svg" class="block__img my-4" alt="FIX">
+				<h5 class="fw-bold mb-4 ms-2">Сайт работает плохо и выглядит непривлекательно?</h5>
+					<ul class="block__list mb-4 me-2">
+						<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Чиним и воскрешаем нерабочие сайты, вдыхаем в них жизнь</li>
+						<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Решаем задачи не с точки зрения программистов, а с точки зрения бизнеса: со всей отдачей погружаемся в нишу, анализируем рынок, изучаем конкурентов</li>
+						<li class="my-2"><span class="fs-3 lh-1">&bull;</span> В процессе работы делаем только нужное и важное</li>
+					</ul>
+		</div>
+
+		<div class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center">
+				<img src="img/emoji-frown.svg" class="block__img my-4" alt="BAD EXECUTOR">
+				<h5 class="fw-bold mb-4 ms-2">Уже связывались с недобросовестными "СЕОшниками"?</h5>
+					<ul class="block__list mb-4 me-2">
+						<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Разговариваем на понятном языке без сложных терминов</li>
+						<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Технический коллектив расположен в Белоруссии, что позволяет предложить вам доступную цену наряду с высоким качеством выполняемых работ</li>
+						<li class="my-2"><span class="fs-3 lh-1">&bull;</span> В отчётах предоставляем исключительно факты, без воды</li>
+					</ul>
+		</div>
+		
+		</div>
 </section>
 	
 	</main>
