--- a/dev/index.html
+++ b/dev/index.html
@@ -98,8 +98,8 @@
 	<section class="top container-fluid p-5">
 	<div class="container">
 		<!--TOP TITLE-->
-		<div class="top__main row">
-			<div class="col-12 col-md-8 col-xl-6">
+		<div class="top__main row ">
+			<div class="top__item col-12 col-md-8 col-xl-6">
 				<h1 class="fs-1 fw-bold my-4">Продвижение сайта (SEO)</h1>
 				<h3 class="fs-3 fw-bold my-4">Поднимаем ваши сайты с самого дна поисковых систем от 9.900 руб/месяц</h3>
 				<h4 class="fs-4 fw-bold my-4">Число запросов для SEO продвижения не ограничено</h4>
