05/04/21_23:40MSK_new bg for top, new style for infoblock

--- a/dev/index.html
+++ b/dev/index.html
@@ -186,52 +186,61 @@
 	</div>
 </section>
 	<section id="info" class="info container-fluid info py-5">
-	<div class="container">
-		<!--INFO MAIN-->
-		<div class="row justify-content-center">
-			<h2 class="info__title col-12 col-md-6 mb-4 fs-2 fw-bolder text-center">SEO-оптимизация</h2>
-		</div>
-		<div class="row justify-content-center">
-			<p class="info__text col-12 col-md-10 text-center text-break fs-6 fs-sm-5">Следующий шаг после создания веб-сайта – продвижение в
-				поисковых системах. В России главные поисковые машины – Яндекс и Гугл, мы предлагаем SEO для обеих. Вам не нужно
-				пытаться понять все сложности поискового продвижения, - этим займёмся мы!
-			</p>
-		</div>
-		<div class="row justify-content-center">
-			<p class="info__text col-12 col-md-10 text-center text-break fs-6 fs-sm-5">Выведение сайта в «топ» поисковиков – длительный процесс,
-				который требует специальных знаний. Зато результат даст вам множество ценных преимуществ:
-			</p>
-		</div>
-		<!--INFO ITEM CARD-->
-		<div class="row d-flex gap-5 justify-content-between mt-3">
-			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
-				<img src="img/emoji-sunglasses.svg" class="info__item-img img-fluid" alt="HAPPY CUSTOMERS">
-				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">привлечение «тёплых» клиентов,
-					нуждающихся в вашем продукте</p>
-			</article>
-			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
-				<img src="img/gear.svg" class="info__item-img img-fluid" alt="OPTIMIZATION">
-				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">оптимизацию интерфейса сайта (он
-					станет более удобным)</p>
-			</article>
-			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
-				<img src="img/graph-up.svg" class="info__item-img img-fluid" alt="NEW MARKET">
-				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">нахождение новых рынков сбыта
-					ваших товаров/услуг</p>
-			</article>
-			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
-				<img src="img/person-plus.svg" class="info__item-img img-fluid" alt="CUSTOMERS PLUS">
-				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">появление дополнительных клиентов,
-					а значит – рост продаж</p>
-			</article>
-			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
-				<img src="img/stopwatch.svg" class="info__item-img img-fluid" alt="LONG TIME">
-				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">отличие от контекстной рекламы,
-					эффект от SEO – длительный</p>
-			</article>
-		</div>
-
-	</div>
+  <div class="container">
+    <!--INFO MAIN-->
+    <div class="row justify-content-center">
+      <h2 class="info__title col-12 col-md-6 mb-4 fs-2 fw-bolder text-center">SEO-оптимизация</h2>
+    </div>
+    <div class="row justify-content-center">
+      <p class="info__text col-12 col-md-10 text-center text-break fs-6 fs-sm-5">Следующий шаг после создания веб-сайта – продвижение в
+        поисковых системах. В России главные поисковые машины – Яндекс и Гугл, мы предлагаем SEO для обеих. Вам не нужно
+        пытаться понять все сложности поискового продвижения, - этим займёмся мы!
+      </p>
+    </div>
+    <div class="row justify-content-center">
+      <p class="info__text col-12 col-md-10 text-center text-break fs-6 fs-sm-5">Выведение сайта в «топ» поисковиков – длительный процесс,
+        который требует специальных знаний. Зато результат даст вам множество ценных преимуществ:
+      </p>
+    </div>
+    <!--INFO ITEM CARD-->
+    <div class="row d-flex justify-content-between mt-3">
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
+      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/emoji-sunglasses.svg" class="info__item-img img-fluid" alt="HAPPY CUSTOMERS">
+      	</figure>
+      	<p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">привлечение «тёплых» клиентов,
+          нуждающихся в вашем продукте</p>
+      </article>
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
+      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/gear.svg" class="info__item-img img-fluid" alt="OPTIMIZATION">
+      	</figure>
+        <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">оптимизацию интерфейса сайта (он
+          станет более удобным)</p>
+      </article>
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
+      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/graph-up.svg" class="info__item-img img-fluid" alt="NEW MARKET">
+      	</figure>
+        <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">нахождение новых рынков сбыта
+          ваших товаров/услуг</p>
+      </article>
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
+      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/person-plus.svg" class="info__item-img img-fluid" alt="CUSTOMERS PLUS">
+      	</figure>
+        <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">появление дополнительных клиентов,
+          а значит – рост продаж</p>
+      </article>
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
+      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/stopwatch.svg" class="info__item-img img-fluid" alt="LONG TIME">
+      	</figure>
+        <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">отличие от контекстной рекламы,
+          эффект от SEO – длительный</p>
+      </article>
+    </div>
+  </div>
 </section>
 	<section id="order" class="order conatiner-fluid py-5 mb-5">
 	<!--ORDER CALL INFO-->
