--- a/dev/index.html
+++ b/dev/index.html
@@ -204,37 +204,37 @@
     </div>
     <!--INFO ITEM CARD-->
     <div class="row d-flex justify-content-between mt-3">
-      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
-      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
-      		<img src="img/emoji-sunglasses.svg" class="info__item-img img-fluid" alt="HAPPY CUSTOMERS">
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-1 gap-sm-2 col-12 col-md-6 border border-1 py-2 px-3">
+      	<figure class="w-50 h-75 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/5.png" class="info__item-img img-fluid" alt="HAPPY CUSTOMERS">
       	</figure>
       	<p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">привлечение «тёплых» клиентов,
           нуждающихся в вашем продукте</p>
       </article>
-      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
-      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
-      		<img src="img/gear.svg" class="info__item-img img-fluid" alt="OPTIMIZATION">
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-1 gap-sm-2 col-12 col-md-6 border border-1 py-2 px-3">
+      	<figure class="w-50 h-75 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/4.png" class="info__item-img img-fluid" alt="OPTIMIZATION">
       	</figure>
         <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">оптимизацию интерфейса сайта (он
           станет более удобным)</p>
       </article>
-      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
-      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
-      		<img src="img/graph-up.svg" class="info__item-img img-fluid" alt="NEW MARKET">
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-1 gap-sm-2 col-12 col-md-6 border border-1 py-2 px-3">
+      	<figure class="w-50 h-75 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/3.png" class="info__item-img img-fluid" alt="NEW MARKET">
       	</figure>
         <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">нахождение новых рынков сбыта
           ваших товаров/услуг</p>
       </article>
-      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
-      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
-      		<img src="img/person-plus.svg" class="info__item-img img-fluid" alt="CUSTOMERS PLUS">
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-1 gap-sm-2 col-12 col-md-6 border border-1 py-2 px-3">
+      	<figure class="w-50 h-75 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/2.png" class="info__item-img img-fluid" alt="CUSTOMERS PLUS">
       	</figure>
         <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">появление дополнительных клиентов,
           а значит – рост продаж</p>
       </article>
-      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-5 col-12 col-sm-6 border border-1 bg-light py-5 px-3">
-      	<figure class="w-25 h-100 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
-      		<img src="img/stopwatch.svg" class="info__item-img img-fluid" alt="LONG TIME">
+      <article class="info__item d-flex flex-column flex-sm-row justify-content-between align-items-center gap-1 gap-sm-2 col-12 col-md-6 border border-1 py-2 px-3">
+      	<figure class="w-50 h-75 flex-grow-1 flex-shrink-1 flex-sm-shrink-0">
+      		<img src="img/1.png" class="info__item-img img-fluid" alt="LONG TIME">
       	</figure>
         <p class="info__item-text flex-shrink-1 text-center text-break fs-6 fs-sm-5 fw-bolder">отличие от контекстной рекламы,
           эффект от SEO – длительный</p>
