--- a/dev/index.html
+++ b/dev/index.html
@@ -242,6 +242,13 @@
     </div>
   </div>
 </section>
+	<section id="video-block" class="video-block container-fluid info pt-2 pb-5">
+  <div class="container video-block__container">
+		<div class="video-block__item">
+			<iframe class="video-block__frame d-block mx-auto" src="https://www.youtube.com/embed/5wod3FReNOM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+	</div>
+</section>
 	<section id="order" class="order conatiner-fluid py-5 mb-5">
 	<!--ORDER CALL INFO-->
 	<div class="row flex-column justify-content-center align-items-center">
