--- a/dev/index.html
+++ b/dev/index.html
@@ -10,6 +10,21 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+		m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		ym(75825307, "init", {
+				clickmap:true,
+				trackLinks:true,
+				accurateTrackBounce:true,
+				webvisor:true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/75825307" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 <body>
 	<header class="header container-fluid fixed-top border-bottom shadow-lg">
@@ -101,7 +116,7 @@
 		<div class="top__main row ">
 			<div class="top__item col-12 col-md-8 col-xl-6">
 				<h1 class="fs-1 fw-bold my-4">Продвижение сайта (SEO)</h1>
-				<h3 class="fs-3 fw-bold my-4">Поднимаем ваши сайты с самого дна поисковых систем от 9.900 руб/месяц</h3>
+				<h3 class="fs-3 fw-bold my-4">Поднимаем ваши сайты с самого дна поисковых систем от <span class="top__item_price">9.900 руб/месяц</span></h3>
 				<h4 class="fs-4 fw-bold my-4">Число запросов для SEO продвижения не ограничено</h4>
 				<h4 class="fs-4 fw-bold my-4">Гарантии результата — в договоре</h4>
 				<button type="button" class="btn btn-warning fs-6 fs-sm-4 fw-bold my-4 py-3" data-bs-toggle="modal"
@@ -328,7 +343,7 @@
 				нулям?</h3>
 			<ul class="block__list mb-5 me-2">
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Исправим это недоразумение, потому что мы опытная команда
-					— в этой теме с 2004 года</li>
+					— в этой теме с 2017 года</li>
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Ставим чёткие цели, применяем современные подходы к
 					продвижению сайтов</li>
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Используем гибкие методы к ведению проектов Agile и Scrum
@@ -353,7 +368,7 @@
 				"СЕОшниками"?</h3>
 			<ul class="block__list mb-4 me-2">
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Разговариваем на понятном языке без сложных терминов</li>
-				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Технический коллектив расположен в Белоруссии, что
+				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Технический коллектив расположен в России, Беларуси и Казахстане, что
 					позволяет предложить вам доступную цену наряду с высоким качеством выполняемых работ</li>
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> В отчётах предоставляем исключительно факты, без воды
 				</li>
@@ -970,7 +985,7 @@
 		</div>
 	</div>
 </section>
-	<section id="team" class="team container-fluid my-5 py-5">
+	<section id="team" class="team container-fluid mt-5 mb-0 pt-5 pb-0">
 	<!--TEAM TITLE-->
 	<div class="team__head container h-100 mb-4">
 		<div class="row flex-column justify-content-center align-items-center">
@@ -1007,7 +1022,8 @@
 		</div>
 	</div>
 </section>
-	<section id="price" class="price container-fluid my-5 py-5">
+	<section id="price" class="price container-fluid mb-0 mb-md-5 py-5">
+	<div class="price__container col-12 col-sm-10 mx-auto px-2 py-4">
 	<!--PRICE TITLE-->
 	<div class="price__head container h-100 mb-4">
 		<div class="row flex-column justify-content-center align-items-center">
@@ -1090,142 +1106,10 @@
 			</div>
 		</div>
 	</div>
+</div>
 </section>
-	<section class="review container-fluid my-5 py-5">
-	<!--REVIEW TITLE-->
-	<div class="review__head container h-100 mb-4">
-		<div class="row flex-column justify-content-center align-items-center">
-			<div class="col-12 d-flex flex-column justify-content-center align-items-center">
-				<h2 class="review__title mb-4 fs-2 fw-bolder text-center">Отзывы</h2>
-			</div>
-		</div>
-	</div>
-	<!--REVIEW CAROUSEL-->
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<div id="carouselExampleIndicators" class="carousel slide carousel-dark" data-bs-ride="carousel" data-bs-interval="false">
-					<div class="carousel-inner">
-						<div class="carousel-item active text-center">
-							<picture>
-								<source media="(max-width: 800px)" srcset="img/review-1-min.png">
-								<source media="(min-width: 801px)" srcset="img/review-1.png">
-								<img src="img/review-1.png" class="img-fluid w-75 h-75 px-5" alt="SEO TEAM">
-							</picture>
-						</div>
-						<div class="carousel-item  text-center">
-							<picture>
-								<source media="(max-width: 800px)" srcset="img/review-2-min.png">
-								<source media="(min-width: 801px)" srcset="img/review-2.png">
-								<img src="img/review-2.png" class="img-fluid w-75 h-75 px-5" alt="SEO TEAM">
-							</picture>
-						</div>
-						<div class="carousel-item text-center">
-							<picture>
-								<source media="(max-width: 800px)" srcset="img/review-3-min.png">
-								<source media="(min-width: 801px)" srcset="img/review-3.png">
-								<img src="img/review-3.png" class="img-fluid w-75 h-75 px-5" alt="SEO TEAM">
-							</picture>
-						</div>
-						<div class="carousel-item text-center">
-							<picture>
-								<source media="(max-width: 800px)" srcset="img/review-4-min.png">
-								<source media="(min-width: 801px)" srcset="img/review-4.png">
-								<img src="img/review-4.png" class="img-fluid w-75 h-75 px-5" alt="SEO TEAM">
-							</picture>
-						</div>
-						<div class="carousel-item text-center">
-							<picture>
-								<source media="(max-width: 800px)" srcset="img/review-5-min.png">
-								<source media="(min-width: 801px)" srcset="img/review-5.png">
-								<img src="img/review-5.png" class="img-fluid w-75 h-75 px-5" alt="SEO TEAM">
-							</picture>
-						</div>
-					</div>
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Previous</span>
-					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Next</span>
-					</button>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-	<section id="order" class="order conatiner-fluid py-5 mb-5">
-	<div class="order__container col-10 col-sm-8 mx-auto p-4">
-		<!--ORDER CALL INFO-->
-		<div class="row flex-column justify-content-center align-items-center">
-			<div class="col-12 col-sm-10 d-flex flex-column justify-content-center align-items-center">
-				<h2 class="order__title mb-4 fs-2 fw-bolder text-center">Заказать звонок</h2>
-				<p class="order__text mb-4 fs-3 text-center">Получите индивидуальное коммерческое предложение для вашего сайта
-				</p>
-				<button type="button" class="btn btn-warning fs-4 fw-bold py-3" data-bs-toggle="modal"
-					data-bs-target="#orderCall">Позвоните мне</button>
-			</div>
-		</div>
-
-		<!-- MODAL FOR ORDER -->
-		<div class="modal fade" id="orderCall" tabindex="-1" aria-labelledby="orderCallLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="orderCallLabel">Заказ звонка</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<!--MODAL FORM-->
-						<form class="row g-3 needs-validation" id="formOrderCall" name="formOrderCall" method="POST"
-							action="php/orderCall.php" novalidate>
-							<div class="col-12">
-								<label for="nameCall" class="form-label">ФИО*:</label>
-								<input type="text" class="form-control" id="nameCall" name="nameCall" placeholder="ФИО" required>
-								<div class="valid-feedback">
-									Отлично!
-								</div>
-								<div class="invalid-feedback">
-									Пожалуйста, введите Ваше имя
-								</div>
-							</div>
-							<div class="col-12">
-								<label for="phoneCall" class="form-label">Телефон*:</label>
-								<input type="text" class="form-control" id="phoneCall" name="phoneCall" required>
-								<div class="valid-feedback">
-									Отлично!
-								</div>
-								<div class="invalid-feedback">
-									Пожалуйста, введите Ваш номер телефона
-								</div>
-							</div>
-							<div class="col-12">
-								<div class="form-check">
-									<input class="form-check-input" type="checkbox" value="true" id="personDataCall" required>
-									<label class="form-check-label" for="personDataOrder">
-										Я согласен на обработку персональных данных
-									</label>
-									<div class="invalid-feedback">
-										Пожалуйста, дайте Ваше согласие на обработку персональных данных
-									</div>
-								</div>
-							</div>
-							<div class="col-12">
-								<button class="btn btn-warning fw-bolder" type="submit" disabled>Отправить</button>
-							</div>
-						</form>
-						<!---->
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary fw-bolder" data-bs-dismiss="modal">Закрыть</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-	<section class="faq container-fluid my-0 py-5">
+	
+	<section class="faq container-fluid mb-0 py-5">
 <!--FAQ TITLE-->
 <div class="review__head container my-5">
 	<div class="row flex-column justify-content-center align-items-center">
@@ -1311,6 +1195,76 @@
 		</article>
 	</div>
 </div>
+</section>
+	<section id="order" class="order conatiner-fluid py-5 mb-5">
+	<div class="order__container col-10 col-sm-8 mx-auto p-4">
+		<!--ORDER CALL INFO-->
+		<div class="row flex-column justify-content-center align-items-center">
+			<div class="col-12 col-sm-10 d-flex flex-column justify-content-center align-items-center">
+				<h2 class="order__title mb-4 fs-2 fw-bolder text-center">Заказать звонок</h2>
+				<p class="order__text mb-4 fs-3 text-center">Получите индивидуальное коммерческое предложение для вашего сайта
+				</p>
+				<button type="button" class="btn btn-warning fs-4 fw-bold py-3" data-bs-toggle="modal"
+					data-bs-target="#orderCall">Позвоните мне</button>
+			</div>
+		</div>
+
+		<!-- MODAL FOR ORDER -->
+		<div class="modal fade" id="orderCall" tabindex="-1" aria-labelledby="orderCallLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="orderCallLabel">Заказ звонка</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<!--MODAL FORM-->
+						<form class="row g-3 needs-validation" id="formOrderCall" name="formOrderCall" method="POST"
+							action="php/orderCall.php" novalidate>
+							<div class="col-12">
+								<label for="nameCall" class="form-label">ФИО*:</label>
+								<input type="text" class="form-control" id="nameCall" name="nameCall" placeholder="ФИО" required>
+								<div class="valid-feedback">
+									Отлично!
+								</div>
+								<div class="invalid-feedback">
+									Пожалуйста, введите Ваше имя
+								</div>
+							</div>
+							<div class="col-12">
+								<label for="phoneCall" class="form-label">Телефон*:</label>
+								<input type="text" class="form-control" id="phoneCall" name="phoneCall" required>
+								<div class="valid-feedback">
+									Отлично!
+								</div>
+								<div class="invalid-feedback">
+									Пожалуйста, введите Ваш номер телефона
+								</div>
+							</div>
+							<div class="col-12">
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" value="true" id="personDataCall" required>
+									<label class="form-check-label" for="personDataOrder">
+										Я согласен на обработку персональных данных
+									</label>
+									<div class="invalid-feedback">
+										Пожалуйста, дайте Ваше согласие на обработку персональных данных
+									</div>
+								</div>
+							</div>
+							<div class="col-12">
+								<button class="btn btn-warning fw-bolder" type="submit" disabled>Отправить</button>
+							</div>
+						</form>
+						<!---->
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary fw-bolder" data-bs-dismiss="modal">Закрыть</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 	</main>
 	<footer id="footer" class="footer container-fluid pt-5 pb-2">
